# Topstep-Simulator

./: .gitignore  README.md  pyproject.toml  run-cli.cmd
config/: README.md
scripts/: summarize_result_json.py
src/v3/: audit_stamp.py  cli.py  combine_simulator.py  config.py  data.py  evaluator.py  freeze.py  funded_express_sim.py  holdout_monte_carlo.py  indicators.py  json_readable.py  monte_carlo.py  pipeline_config.py  pivots.py  position_sizing.py  regime_classifier.py  sensitivity.py  sizing_comparison.py  strategies.py  topstep.py  trades.py  validator.py  verdict.py
src/v3/user_strategies/: __init__.py  hl2_sma_retrace_atr.py
tests/: test_funded_express_sim_enhanced.py  test_position_sizing.py
tests/v3/: test_adaptive_pass_floor.py  test_funded_express_sim.py  test_json_readable.py  test_json_readable_v2.py  test_long_short_metrics.py  test_longevity_optimizer_mc.py  test_monte_carlo.py  test_regime_classifier.py  test_sizing_comparison.py  test_speed_optimizer_aggregate.py  test_v3_audit_stamp.py  test_v3_cli.py  test_v3_combine_simulator.py  test_v3_evaluator.py  test_v3_freeze.py  test_v3_scoring_weights.py  test_v3_sensitivity.py  test_v3_setup.py  test_v3_user_strategies.py  test_v3_validator.py  test_v3_verdict.py
